--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="UVFfYERo_9sxSS0Q56zJWCfTnctPFFf3ZlxyYfqBYKU" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_nghich.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
